--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --footer-color: rgba(47, 48, 58, 1);
   --another-color: rgba(255, 255, 255, 0.6);
   --button-color: rgba(245, 244, 250, 1);
+  --background-img: rgba(47, 48, 58, 0.4);
   --primary-font: 'roboto', sans-serif;
   --secundary-font: 'raleway', sans-serif;
 }
@@ -44,7 +45,17 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
-
+.icon1 { 
+  width: 16px;
+  height: 12px;
+} 
+.icon2 {
+  width: 16px;
+    height: 12px;}
+ .icon2:hover {
+   fill: var(--blue);
+   
+ }
 .header {
   width: 1600px;
   height: 80px;
@@ -92,6 +103,7 @@ a {
   line-height: 16px;
   color: var(--black);
 }
+
 .about a:hover {
   color: var(--blue);
 }
@@ -101,7 +113,7 @@ a {
 .header__info {
   display: flex;
   gap: 40px;
-  margin-right: 100px;
+  
 }
 .header__info a {
   color: var(--light-black);
@@ -109,17 +121,29 @@ a {
   font-size: 14px;
   line-height: 16px;
 }
-.header__info a:hover {
+.header__info :hover {
   display: flex;
   color: var(--blue);
 }
-.header__info a:focus {
+.header__info :focus {
   color: var(--blue);
 }
 .solution {
-  background-color: var(--footer-color);
+  background-color: rgba(47, 48, 58, 1);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   width: 1600px;
   height: 600px;
+  background-image: 
+  linear-gradient(0deg,
+      rgba(47, 48, 58, 0.4),
+      rgba(25, 28, 38, 0.8)),
+
+  url(../images/bg-img.jpeg);
+  background-position:30% 35%;
+  background-size: cover;
+  
 }
 .solution__title {
   width: 696px;
@@ -136,10 +160,21 @@ a {
 .hero-section .hero-ul {
   display: flex;
 }
-
+.hero-icon {
+  width: 70px;
+  height: 70px;
+ padding-top: 25px;
+}
+.hi {
+  width: 270px;
+  height: 120px;
+  text-align: center;
+  background-color: var(--button-color);
+  margin-bottom: 30px;
+}
 .hero-section {
   width: 1170px;
-  height: 101px;
+  height: 251px;
 }
 
 .hero-section__text {
@@ -179,8 +214,10 @@ a {
   padding-top: 94px;
 }
 
+
 .hero-ul {
   gap: 30px;
+ 
 }
 .hero-section h5 {
   font-size: 14px;
@@ -206,9 +243,10 @@ a {
 }
 
 .what-we-do {
-  padding-top: 94px;
+  
   display: flex;
   padding-bottom: 94px;
+
 }
 
 .about-img {
@@ -224,7 +262,8 @@ a {
   display: flex;
   padding-bottom: 94px;
   width: 1600px;
-  height: 648px;
+  height: 708px;
+  padding-top: 94px;
 }
 .the-team ul {
   display: flex;
@@ -236,16 +275,35 @@ a {
 }
 .list-c {
   width: 270px;
-  height: 368px;
+  height: 428px;
   background-color: var(--white);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  box-shadow:  0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+     0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+     0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+
+.team-icons {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 30px;
+}
+.team-icons li  {
+   background-color: var(--white);
+   padding: 12px;
+   border-radius: 100px;
+ }
+ .team-icons li :hover .icon {
+fill: var(--blue);
+ }
 
 .what-we-do {
   width: 1170px;
   height: 386px;
+  padding-top: 94px;
+
 }
 .what-we-do img {
   width: 370px;
@@ -393,4 +451,21 @@ a {
 .footer__m {
   padding-top: 28px;
   padding-bottom: 12px;
+}
+.icon {
+  width: 20px;
+  height: 20px;
+}
+.icon :hover {
+  fill: var(--blue);
+}
+.tittle {
+  font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42.19px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    padding-bottom: 50px;
+   
 }
