--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,12 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
-.icon1, .icon2 { 
+.icon1,
+.icon2 {
   width: 16px;
   height: 12px;
-} 
+}
 
- 
-   
- 
 .header {
   width: 1600px;
   height: 80px;
@@ -110,7 +108,6 @@ a {
 .header__info {
   display: flex;
   gap: 40px;
-  
 }
 .header__info a {
   color: var(--light-black);
@@ -123,10 +120,8 @@ a {
   fill: var(--blue);
 }
 
-
 .header__info :focus {
   color: var(--blue);
-  
 }
 
 .solution {
@@ -136,15 +131,14 @@ a {
   align-items: flex-end;
   width: 1600px;
   height: 600px;
-  background-image: 
-  linear-gradient(0deg,
+  background-image: linear-gradient(
+      0deg,
       rgba(47, 48, 58, 0.4),
-      rgba(25, 28, 38, 0.8)),
-
-  url(../images/bg-img.jpeg);
-  background-position:30% 35%;
+      rgba(25, 28, 38, 0.8)
+    ),
+    url(../images/bg-img.jpeg);
+  background-position: 30% 35%;
   background-size: cover;
-  
 }
 .solution__title {
   width: 696px;
@@ -164,7 +158,7 @@ a {
 .hero-icon {
   width: 70px;
   height: 70px;
- padding-top: 25px;
+  padding-top: 25px;
 }
 .hi {
   width: 270px;
@@ -215,10 +209,8 @@ a {
   padding-top: 94px;
 }
 
-
 .hero-ul {
   gap: 30px;
- 
 }
 .hero-section h5 {
   font-size: 14px;
@@ -244,10 +236,8 @@ a {
 }
 
 .what-we-do {
-  
   display: flex;
   padding-bottom: 94px;
-
 }
 
 .about-img {
@@ -259,7 +249,7 @@ a {
 }
 
 .the-team {
-background-color: var(--button-color);
+  background-color: var(--button-color);
   display: flex;
   width: 1600px;
   height: 708px;
@@ -268,7 +258,7 @@ background-color: var(--button-color);
 }
 
 .social-icon li {
-text-align: center;
+  text-align: center;
   width: 44px;
   height: 44px;
   margin-top: 16px;
@@ -277,24 +267,22 @@ text-align: center;
   flex-wrap: nowrap;
   justify-content: center;
   border-radius: 50%;
-  
 }
 .social-icon li:hover {
   stroke: var(--white);
   background-color: var(--blue);
 }
 .social-icon li:hover svg {
-fill: var(--white);
+  fill: var(--white);
 }
 
-.team-list{
+.team-list {
   display: flex;
   gap: 30px;
 }
 .social-icon {
   display: flex;
   gap: 10px;
-  
 }
 .team {
   padding-top: 94px;
@@ -303,39 +291,36 @@ fill: var(--white);
 .team-work {
   display: flex;
   align-items: center;
-      flex-direction: column;
+  flex-direction: column;
   border-bottom: 94px;
   width: 270px;
   height: 428px;
   background-color: var(--white);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  box-shadow:  0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-     0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-     0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 .team-icons {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    margin-top: 30px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 30px;
 }
-.team-icons li  {
-   background-color: var(--white);
-   padding: 12px;
-   border-radius: 100px;
- }
- .team-icons li :hover .icon {
-fill: var(--blue);
- }
+.team-icons li {
+  background-color: var(--white);
+  padding: 12px;
+  border-radius: 100px;
+}
+.team-icons li :hover .icon {
+  fill: var(--blue);
+}
 
 .what-we-do {
   width: 1170px;
   height: 386px;
   padding-top: 94px;
-
 }
 .what-we-do img {
   width: 370px;
@@ -436,54 +421,44 @@ fill: var(--blue);
 }
 .img-list :hover {
   cursor: pointer;
-  box-shadow:  
-  1px 4px 6px 0px rgba(0, 0, 0, 0.16);
-  0px 4px 4px 0px rgba(0, 0, 0, 0.06);
-  0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
+    0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
 
-  
-
 .costumers {
-  
   width: 1170px;
   height: 184px;
   padding-top: 94px;
-  
 }
 .all-costumers {
-  
   display: flex;
   justify-content: center;
   gap: 30px;
 }
 
 .costumers-svg {
-  
   text-align: center;
   width: 170px;
   height: 92px;
-   border: 1px solid rgba(175, 177, 184, 1);
-   border-radius: 4px;
+  border: 1px solid rgba(175, 177, 184, 1);
+  border-radius: 4px;
 }
 .all-costumers :hover .svg-costumers {
-  
   fill: rgb(32, 148, 243);
-    stroke: rgb(32, 148, 243);
-  }
-    .all-costumers :hover {
+  stroke: rgb(32, 148, 243);
+}
+.all-costumers :hover {
   border-color: var(--blue);
-
 }
 .svg-costumers :hover {
-   fill: rgb(32, 148, 243);;
+  fill: rgb(32, 148, 243);
 }
 
 .svg-costumers {
- fill: rgba(175, 177, 184, 1);
+  fill: rgba(175, 177, 184, 1);
   width: 106px;
   height: 60px;
-padding-top: 16px;
+  padding-top: 16px;
   padding-bottom: 16px;
 }
 .footer {
@@ -497,7 +472,6 @@ padding-top: 16px;
   letter-spacing: 0.03em;
   padding-top: 60px;
   margin-top: 94px;
-  
 }
 .footer__adr:hover,
 .footer__mail:hover,
@@ -541,32 +515,28 @@ padding-top: 16px;
 
 .tittle {
   font-family: Roboto;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 42.19px;
-    letter-spacing: 0.03em;
-    text-align: center;
-    padding-bottom: 50px;
-   
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 42.19px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  padding-bottom: 50px;
 }
 .tittle-footer {
   font-family: var(--primary-font);
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16.41px;
-    letter-spacing: 0.03em;
-    color: var(--white);
-    
-    
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16.41px;
+  letter-spacing: 0.03em;
+  color: var(--white);
 }
 
-.footer1, .footer2 {
- display: flex;
-
+.footer1,
+.footer2 {
+  display: flex;
 }
 
 .footer2-p2 {
- 
   width: 206px;
   height: 80px;
   padding-top: 5px;
@@ -574,8 +544,8 @@ padding-top: 16px;
 }
 .icon-footer {
   fill: rgba(175, 177, 184, 1);
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 .footer-social-icon {
   display: flex;
@@ -583,15 +553,15 @@ padding-top: 16px;
 }
 .footer-social-icon li {
   text-align: center;
-    width: 44px;
-    height: 44px;
-    margin-top: 16px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .footer-social-icon li:hover {
   stroke: var(--white);
@@ -602,7 +572,6 @@ padding-top: 16px;
   fill: var(--white);
 }
 .icon {
-  
   fill: rgba(175, 177, 184, 1);
   width: 20px;
   height: 20px;
