--- a/css/style.css
+++ b/css/style.css
@@ -419,14 +419,11 @@ a {
   height: 404px;
   border: 1px solid rgba(238, 238, 238, 1);
 }
- .images li
- :hover  {
- 
+.images li :hover {
   cursor: pointer;
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
-
 
 .costumers {
   width: 1170px;
@@ -501,7 +498,6 @@ a {
   color: var(--black);
 }
 .footer__adr {
-  
   font-style: normal;
   color: var(--white);
   padding-top: 28px;
@@ -536,30 +532,26 @@ a {
 
 .tittle-footer {
   font-family: var(--primary-font);
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16.41px;
-    letter-spacing: 0.03em;
-    color: var(--white);
-
-
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16.41px;
+  letter-spacing: 0.03em;
+  color: var(--white);
 }
-
 
 .footer .container {
   display: flex;
 }
- .footer2 {
+.footer2 {
   width: 206px;
   height: 80px;
   padding-left: 70px;
   padding-top: 15px;
- 
 }
 .icon-footer {
   fill: rgba(175, 177, 184, 1);
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 .footer-social-icon {
   display: flex;
@@ -567,15 +559,15 @@ a {
 }
 .footer-social-icon li {
   text-align: center;
-    width: 44px;
-    height: 44px;
-    margin-top: 16px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .footer-social-icon li:hover {
   stroke: var(--white);
